--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Vocal Agent - Python Dependencies
 
 # Core uAgents framework
-uagents>=0.12.0
-fetch-ai-ledger>=1.0.0
+uagents>=0.21.0
+# Note: fetch-ai-ledger not available for Python 3.13, using uagents built-in ledger support
 
 # API clients and integrations
 google-api-python-client>=2.100.0
