--- a/requirements.txt
+++ b/requirements.txt
@@ -59,3 +59,11 @@ python-dotenv>=1.0.0
 # Data validation and serialization
 marshmallow>=3.20.0
 jsonschema>=4.19.0
+
+
+#new-agents
+uagents>=0.18.1
+google-auth>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.0.0
